--- a/index_template.html
+++ b/index_template.html
@@ -341,17 +341,17 @@
                 <hr class="rounded3">
                 <section>
                     <div class="content">
-                        <h2>CVEs found by <a href="">VMUD</a>:</h3>
+                        <h3>CVEs found by <a href="">VMUD</a>:</h3>
                         <ul>
-                            <li><a>CVE-2024-29645</a>: in radareorg/radare2</li> 
-                            <li><a>CVE-2024-29646</a>: in radareorg/radare2</li>
-                            <li><a>CVE-2024-31668</a>: in rizinorg/rizin</li>
-                            <li><a>CVE-2024-31669</a>: in rizinorg/rizin</li>
-                            <li><a>CVE-2024-31670</a>: in rizinorg/rizin</li>
-                            <li><a>CVE-2023-41080</a>: in apache/tomcat</li>
-                            <li><a>CVE-2023-51437</a>: in apache/pulsar</li>
-                            <li><a>CVE-2024-24891</a>: in src-openEuler/kernel</li>
-                            <li><a>CVE-2024-24898</a>: in src-openEuler/kernel</li>
+                            <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-24891">CVE-2024-24891</a>: Exposure of Sensitive Information to an Unauthorized Actor vulnerability in <a href="https://gitee.com/openeuler/kernel">openEuler/kernel</a>.</li>
+                            <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2024-24898">CVE-2024-24898</a>: Exposure of Sensitive Information to an Unauthorized Actor vulnerability in <a href="https://gitee.com/openeuler/kernel">openEuler/kernel</a>.</li>
+                            <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2023-51437">CVE-2023-51437</a>: Observable timing discrepancy vulnerability in <a href="https://github.com/apache/pulsar">apache/pulsar</a>.</li>
+                            <li><a href="https://nvd.nist.gov/vuln/detail/CVE-2023-41080">CVE-2023-41080</a>: URL Redirection vulnerability in <a href="https://github.com/apache/tomcat">apache/tomcat</a>.</li>
+                            <li><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-29645">CVE-2024-29645</a>: Reserved vulnerability in <a href="https://github.com/radareorg/radare2">radareorg/radare2</a>.</li> 
+                            <li><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-29646">CVE-2024-29646</a>: Reserved vulnerability in <a href="https://github.com/radareorg/radare2">radareorg/radare2</a>.</li>
+                            <li><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-31668">CVE-2024-31668</a>: Reserved vulnerability in <a href="https://github.com/rizinorg/rizin">rizinorg/rizin</a>.</li>
+                            <li><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-31669">CVE-2024-31669</a>: Reserved vulnerability in <a href="https://github.com/rizinorg/rizin">rizinorg/rizin</a>.</li>
+                            <li><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2024-31670">CVE-2024-31670</a>: Reserved vulnerability in <a href="https://github.com/rizinorg/rizin">rizinorg/rizin</a>.</li>
                         </ul>
 
                     </div>
