--- a/index_template.html
+++ b/index_template.html
@@ -52,7 +52,7 @@
                 <header>
 
                     <!-- <h2>About</h2> -->
-                    <p>Kaifeng Huang is an Assistant Professor (tenure-track) at School of Software Engineering, Tongji Unversity. Prior to that, he was a research fellow at Software Engineering Lab, Fudan University. He obtained his PhD from Fudan University
+                    <p>Kaifeng Huang is an Assistant Professor (tenure-track) at School of Computer Science and Technology, Tongji University. Prior to that, he was a research fellow at Software Engineering Lab, Fudan University. He obtained his PhD from Fudan University
                         in 2022, supervised by <a href="https://cspengxin.github.io/">Prof. Xin Peng</a> and <a href="https://chenbihuan.github.io/">Prof. Bihuan Chen</a>.
                     </p>
                     <p>
