--- a/index_template.html
+++ b/index_template.html
@@ -183,7 +183,13 @@
                 <hr class="rounded3">
                 <div class="row">
                     <div class="content">
-                        <ul>
+                        <ul id="collapsibleList" class="collapsible-content">
+                            <li>
+                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>
+                                    I was honored to serve as a reviewer for the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">Transactions on Information Forensics & Security</a>.</p>
+                                <p></p>
+                            </li>
+
                             <li>
                                 <p><span class="mydate"><strong>[2024.10]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence" is accepted by <a href="https://dl.acm.org/journal/tosem">ACM Transactions on Software Engineering and Methodology</a>.
                                 </p>
@@ -261,39 +267,43 @@
                                 <p><span class="mydate"><strong>[2023.06]&nbsp;</strong></span>One paper titled "Characterizing the Complexity and Its Impact on Testing in ML-Enabled Systems - A Case Study on Rasa" is accepted by <a href="">ICSME 2023</a>.</p>
                                 <p></p>
                             </li>
-                            <li>
+                            <li id="toggleButton" style="cursor: pointer;"><u>More</u></li>
+
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2022.09]&nbsp;</strong></span>I was invited to serve on the program committee of the Artifact Evaluation Track at <a href="">ICSE 2023</a>.</p>
                                 <p></p>
                             </li>
-                            <li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2022.08]&nbsp;</strong></span>I was invited to serve on the program committee of Tool Demo Track at <a href="">SANER 2023</a>.</p>
                                 <p></p>
                             </li>
-                            <li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2022.06]&nbsp;</strong></span>One paper titled "Tracking Patches for Open Source Software Vulnerabilities" is accepted by <a href="">ESEC/FSE 2022</a>.</p>
                                 <p></p>
                             </li>
-                            <li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2022.04]&nbsp;</strong></span>I was awarded the Outstanding Graduate of Fudan University.</p>
                             </li>
-                            <li>
+                            
+
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2022.02]&nbsp;</strong></span>One paper titled "Characterizing Usages, Updates and Risks of Third-Party Libraries in Java Projects" is accepted by <a href="">EMSE 2022</a>.</p>
                                 <p></p>
                             </li>
-                            <li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2022.01]&nbsp;</strong></span>I joined Fudan University as a Postdoctoral Research Fellow.</p>
                             </li>
-                            <li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2021.12]&nbsp;</strong></span>I was honored to receive Fudan Super-PostDoctoral Fellowship.</p>
                             </li>
-                            <li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2021.12]&nbsp;</strong></span>I got my PhD from Fudan University. Thesis entitled "Third-Party Library Harmonization and Update Recommendation Based on API Analysis".</p>
                             </li>
-                            <li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2021.12]&nbsp;</strong></span>I was honored to give talks at "<a href="">2021 CCF Chinasoft</a> Open Source Symposium" and "2021 CCF Chinasoft Doctoral Symposium"</p>
                                 <p></p>
                             </li>
-                            <li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2021.07]&nbsp;</strong></span>One paper titled "RepFinder: Finding Replacements for Missing APIs in Library Update" is accepted by <a href="">ASE 2021</a>.</p>
                                 <p></p>
                             </li>
@@ -375,24 +385,31 @@
                 <hr class="rounded3">
                 <section>
                     <div class="content">
-                        <h3>Reviewers and PC Members:</h3>
+                        <h3>Journal Reviewers:</h3>
                         <ul>
+                            <li>Transactions on Information Forensics & Security</li>
                             <li>ACM Transactions on Software Engineering and Methodology</li>
                             <li>Journal of Software: Evolution and Process</li>
-                            <li>AIWare Challenge, 2024</li>
-                            <li>Research Track, ISSRE 2024</li>
-                            <li>Research Track, ASE 2024</li>
                             <li>IEEE Transactions on Software Engineering</li>
                             <li>Journal of Systems & Software</li>
-                            <li>Junior PC-Track, MSR 2024</li>
                             <li>Science of Computer Programming</li>
                             <li>Empirical Software Engineering</li>
-                            <li>Artifact Evaluation Track, ESEC/FSE 2023</li>
                             <li>Automated Software Engineering Journal</li>
                             <li>IEEE Transactions on Reliability</li>
                             <li>Journal of Software (软件学报)</li>
+                        </ul>
+                        <h3>Conference PC Members:</h3>
+                        <ul>
+                            <li>面向复杂系统的软件分析与测试专刊《Automated Software Engineering Journal》, CCF ChinaSoft</li>
+                            <li>Early Research Achievement, SANER2025</li>
+                            <li>AIWare Challenge, 2024</li>
+                            <li>Research Track, ISSRE 2024</li>
+                            <li>Research Track, ASE 2024</li>
+                            <li>Junior PC-Track, MSR 2024</li>
+                            <li>Artifact Evaluation Track, ESEC/FSE 2023</li>
                             <li>Artifact Evaluation Track, ICSE 2023</li>
-                            <li>Tool Demo Track, SANER 2023/2024</li>
+                            <li>Tool Demo Track, SANER 2024</li>
+                            <li>Tool Demo Track, SANER 2023</li>
                         </ul>
 
                     </div>
