--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
                         </ul>
                         <h3>Conference PC Members:</h3>
                         <ul>
-                            <li>面向复杂系统的软件分析与测试专刊《Automated Software Engineering Journal》, CCF ChinaSoft</li>
-                            <li>Early Research Achievement, SANER2025</li>
+                            <li>面向复杂系统的软件分析与测试专刊《Automated Software Engineering Journal》, CCF ChinaSoft 2024</li>
+                            <li>Early Research Achievement, SANER 2025</li>
                             <li>AIWare Challenge, 2024</li>
                             <li>Research Track, ISSRE 2024</li>
                             <li>Research Track, ASE 2024</li>
