--- a/index_template.html
+++ b/index_template.html
@@ -185,6 +185,12 @@
                     <div class="content">
                         <ul id="collapsibleList" class="collapsible-content">
                             <li>
+                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion" is accepted by <a href="https://conf.researchr.org/track/icse-2025/icse-2025-research-track">ICSE 2025</a>.
+                                </p>
+                                <p></p>
+                            </li>
+
+                            <li>
                                 <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>
                                     I was honored to serve as a reviewer for the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">Transactions on Information Forensics & Security</a>.</p>
                                 <p></p>
@@ -259,15 +265,17 @@
                                 <p><span class="mydate"><strong>[2023.07]&nbsp;</strong></span>One paper titled "Demystifying Dependency Bugs in Deep Learning Stack" is accepted by <a href="https://conf.researchr.org/home/fse-2023">ESEC/FSE 2023</a>.</p>
                                 <p></p>
                             </li>
-                            <li>
+                            <li id="toggleButton" style="cursor: pointer;"><u>More</u></li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2023.06]&nbsp;</strong></span>I was invited to serve on the program committee of the Artifact Evaluation Track at <a href="">ESEC/FSE 2023</a>.</p>
                                 <p></p>
                             </li>
-                            <li>
+                            
+
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2023.06]&nbsp;</strong></span>One paper titled "Characterizing the Complexity and Its Impact on Testing in ML-Enabled Systems - A Case Study on Rasa" is accepted by <a href="">ICSME 2023</a>.</p>
                                 <p></p>
                             </li>
-                            <li id="toggleButton" style="cursor: pointer;"><u>More</u></li>
 
                             <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2022.09]&nbsp;</strong></span>I was invited to serve on the program committee of the Artifact Evaluation Track at <a href="">ICSE 2023</a>.</p>
