--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
                     <div class="content">
                         <ul id="collapsibleList" class="collapsible-content">
                             <li>
+                                <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>Our paper titled "LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion" is accepted by <a href="https://conf.researchr.org/track/icse-2025/icse-2025-research-track">ICSE 2025</a>.
+                                </p>
+                                <p></p>
+                            </li>
+
+                            <li>
                                 <p><span class="mydate"><strong>[2025.01]&nbsp;</strong><img src="https://i.postimg.cc/rszJ2Fb5/new2.gif" style="width:35px;height:35px;" alt=""></span>
                                     I was honored to serve as a reviewer for the <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=10206">Transactions on Information Forensics & Security</a>.</p>
                                 <p></p>
@@ -259,15 +265,17 @@
                                 <p><span class="mydate"><strong>[2023.07]&nbsp;</strong></span>One paper titled "Demystifying Dependency Bugs in Deep Learning Stack" is accepted by <a href="https://conf.researchr.org/home/fse-2023">ESEC/FSE 2023</a>.</p>
                                 <p></p>
                             </li>
-                            <li>
+                            <li id="toggleButton" style="cursor: pointer;"><u>More</u></li>
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2023.06]&nbsp;</strong></span>I was invited to serve on the program committee of the Artifact Evaluation Track at <a href="">ESEC/FSE 2023</a>.</p>
                                 <p></p>
                             </li>
-                            <li>
+                            
+
+                            <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2023.06]&nbsp;</strong></span>One paper titled "Characterizing the Complexity and Its Impact on Testing in ML-Enabled Systems - A Case Study on Rasa" is accepted by <a href="">ICSME 2023</a>.</p>
                                 <p></p>
                             </li>
-                            <li id="toggleButton" style="cursor: pointer;"><u>More</u></li>
 
                             <li class="newsunshow">
                                 <p><span class="mydate"><strong>[2022.09]&nbsp;</strong></span>I was invited to serve on the program committee of the Artifact Evaluation Track at <a href="">ICSE 2023</a>.</p>
@@ -330,7 +338,8 @@
                     <div class="content">
                         <!-- <hr> -->
                         <ol>
-                            <li><p><b><font size="3" color="#0b5394">[TOSEM'24]</font></b> <strong>Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence. </strong><br> Junan Zhang, <u>Kaifeng Huang</u>, Yiheng Huang, Bihuan Chen, Ruisi Wang, Chong Wang, Xin Peng.<em>&nbsp;ACM Transactions on Software Engineering and Methodology,  accepted, 2024.</em></p></li>
+                            <li><p><b><font size="3" color="#0b5394">[ICSE'25]</font></b> <strong>LLMs Meet Library Evolution: Evaluating Deprecated API Usage in LLM-based Code Completion. </strong><br> Chong Wang, <u>Kaifeng Huang</u>, Jian Zhang, Yibo Feng, Lyuye Zhang, Yang Liu, Peng Xin.<em>&nbsp;In Proceedings of the 47th IEEE/ACM International Conference on Software Engineering, Ottawa, Ontario, Canada, accepted, 2025.</em></p></li>
+<li><p><b><font size="3" color="#0b5394">[TOSEM'24]</font></b> <strong>Killing Two Birds with One Stone: Malicious Package Detection in NPM and PyPI using a Single Model of Malicious Behavior Sequence. </strong><br> Junan Zhang, <u>Kaifeng Huang</u>, Yiheng Huang, Bihuan Chen, Ruisi Wang, Chong Wang, Xin Peng.<em>&nbsp;ACM Transactions on Software Engineering and Methodology,  accepted, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[CCS'24]</font></b> <strong>VMUD: Detecting Recurring Vulnerabilities with Multiple Fixing Functions via Function Selection and Semantic Equivalent Statement Matching. <a href="https://dl.acm.org/doi/10.1145/3658644.3690372">[PDF]</a></strong><br> <u>Kaifeng Huang</u>, Chenhao Lu, Yiheng Cao, Bihuan Chen, Xin Peng.<em>&nbsp;In Proceedings of the 31th ACM Conference on Computer and Communications Security, Salt Lake City,  United States, pp. 3958-3972, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ASE'24]</font></b> <strong>Vision: Identifying Affected Library Versions for Open Source Software Vulnerabilities. <a href="https://dl.acm.org/doi/10.1145/3691620.3695516">[PDF]</a></strong><br> Susheng Wu, Ruisi Wang, <u>Kaifeng Huang</u>, Yiheng Cao, Wenyan Song, Zhuotong Zhou, Yiheng Huang, Bihuan Chen, Xin Peng.<em>&nbsp;In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, pp. 1447-1459, 2024.</em></p></li>
 <li><p><b><font size="3" color="#0b5394">[ASE'24]</font></b> <strong>1+1>2: Integrating Deep Code Behaviors with Metadata Features for Malicious PyPI Package Detection. <a href="https://dl.acm.org/doi/10.1145/3691620.3695493">[PDF]</a></strong><br> Xiaobing Sun, Xingan Gao, Sicong Cao, Lili Bo, Xiaoxue Wu, <u>Kaifeng Huang</u>.<em>&nbsp;In Proceedings of the 39th IEEE/ACM International Conference on Automated Software Engineering, Sacramento, California, United States, pp. 1159-1170, 2024.</em></p></li>
